--- a/casper-contract-eip-1337/Cargo.toml
+++ b/casper-contract-eip-1337/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-contract = { package = "casper-contract", version="1.3.2" }
-types = { package = "casper-types", version="1.3.2" }
+contract = { package = "casper-contract", version="=1.3.2" }
+types = { package = "casper-types", version="=1.3.2" }
 erc20 = { package ="casper-erc20", version="0.2.0" }
-renvm-sig = "0.1.1"
 cryptoxide = "0.3.3"
 hex = "0.4.3"
 
