--- a/casper-contract-eip-1337/Cargo.toml
+++ b/casper-contract-eip-1337/Cargo.toml
@@ -11,6 +11,7 @@ contract = { package = "casper-contract", version="=1.3.2" }
 types = { package = "casper-types", version="=1.3.2" }
 erc20 = { package ="casper-erc20", version="0.2.0" }
 hex = "0.4.3"
+uint = "=0.9.1"
 
 [[bin]]
 name = "casper-contract-eip-1337"
